crates/sound/src/snapshots/telmo_sound__ui__tests__eq_main_cycle_toast.snap
---
source: crates/sound/src/ui.rs
expression: "render(&eq_app(\"e\"))"
---
 Sound

╭─ Output ────────────────────────────────────────────────────────────────────────── EQ ─╮
│ ▌ ● MacBook Air Speakers      ━━━━━━━━━━━━━━━━━━━───────────    62%       Speakers ++  │
│     EarFun Air Pro 4          ━━━━━━━━━━━━──────────────────    40%              Flat  │
│     External Headphones       ━━━━━━━━━━━━━━━───────────────    50%        + Sub-bass  │
│     LG UltraFine              fixed volume                                       Flat  │
╰────────────────────────────────────────────────────────────────────────────────────────╯
╭─ Input ────────────────────────────────────────────────────────────────────────────────╮
│   ● MacBook Air Microphone    ━━━━━━━━━━━━━━━━━━━━━━━───────    75%                    │
│     EarFun Air Pro 4          ━━━━━━━━━━━━━━━───────────────    50%                    │
╰────────────────────────────────────────────────────────────────────────────────────────╯



    ▁ ▂
  ▄ █ █ ▇ ▁                               ▂ ▁
▄ █ █ █ █ █ ▃       ▂ ▃ ▂             ▄ █ █ █ ▅                               ▁ ▁
█ █ █ █ █ █ █ ▇ ▆ █ █ █ █ ▆ ▂     ▁ ▆ █ █ █ █ █ █ ▄ ▁ ▁ ▂ ▄ ▅ ▄ ▂       ▁ ▄ ▇ █ █ ▇ ▄ ▁
█ █ █ █ █ █ █ █ █ █ █ █ █ █ █ ▇ ▇ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ █ ▇ ▇ █ █ █ █ █ █ █ █ ▆
  ✓  EQ Speakers ++ · e for next
 ←→ volume  m mute  e next preset  E EQ  f song  ? more  esc close
