crates/sound/src/snapshots/telmo_sound__ui__tests__eq_view_earfun_with_its_note.snap
---
source: crates/sound/src/ui.rs
expression: "render(&eq_app(\"jEv\"))"
---
 Sound  ›  EQ                                                            EarFun Air Pro 4

╭─ Presets ──────────────╮╭─ Your EarFun EQ ──────────────────────────────────────── on ─╮
│     Flat               ││ +10 ┤   ⣰⠲⣄  ⣰⠲⣄                                             │
│ ▌ ● Your EarFun EQ     ││     │  ⢰⠃ ⠈⠓⠚⠁ ⠘⣆                                            │
│     Bass boost         ││     │ ⢀⡏        ⠈⠙⠋⠉⢧⡀                                       │
│     Vocal              ││  +5 ┤⢀⡞              ⢳⡀                                      │
│     Late night         ││     │⠚                ⠳⣄                                     │
│                        ││     │                  ⠈⠳⢤⣀⡀                                 │
│                        ││   0 ┤──────────────────────⠉⠉⠓⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒ │
│                        ││     │                                                        │
│                        ││     │                                                        │
│                        ││  -5 ┤                                                        │
│                        ││     │                                                        │
│                        ││     │▁▃▅▆▆▅▃▁     ▁▁        ▁▂▃▃▃▂                           │
│                        ││ -10 ┤▇▇▇▇▇▇▇▇▇▆▆▆▇▇▇▇▆▄▃▃▃▄▅▇▇▇▇▇▇▇▅▄▄▃▄▄▅▅▅▄▄▃▃▃▃▄▅▆▇▇▆▅▄▃▂ │
│                        ││      20     50    100  200    500   1k   2k     5k    10k    │
│                        ││  preamp -10 dB  ·  31.5 Hz +8 · 63 Hz +7 · 125 Hz +5         │
│                        ││  Set the EarFun app's EQ to flat while this is on.           │
╰────────────────────────╯╰──────────────────────────────────────────────────────────────╯

 ↑↓ preset  b on/off  ←→ bass  r reset  esc back
