crates/sound/src/snapshots/telmo_sound__ui__tests__eq_view_nudged.snap
---
source: crates/sound/src/ui.rs
expression: "render(&eq_app(\"E>>\"))"
---
 Sound  ›  EQ                                                        MacBook Air Speakers

╭─ Presets ──────────────╮╭─ Speakers + · bass +2 dB ─────────────────────────────── on ─╮
│ ▌ ● Speakers +         ││ +10 ┤                                                        │
│     Speakers ++        ││     │                                                        │
│     Flat               ││     │                                                        │
│     Bass boost         ││  +5 ┤                                                        │
│     Vocal              ││     │      ⣀⣀⣀⣠⠤⠤⠴⠒⠒⠒⠒⠲⠤⣄⡀                                   │
│     Late night         ││     │⠉⠉⠉⠉⠉⠉⠁             ⠙⠒⠦⣄⣀⡀                              │
│                        ││   0 ┤─────────────────────────⠉⠉⠙⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒ │
│                        ││     │                                                        │
│                        ││     │                                                        │
│                        ││  -5 ┤                                                        │
│                        ││     │                                                        │
│                        ││     │▁▃▅▆▆▅▃▁     ▁▁        ▁▂▃▃▃▂                           │
│                        ││ -10 ┤▇▇▇▇▇▇▇▇▇▆▆▆▇▇▇▇▆▄▃▃▃▄▅▇▇▇▇▇▇▇▅▄▄▃▄▄▅▅▅▄▄▃▃▃▃▄▅▆▇▇▆▅▄▃▂ │
│                        ││      20     50    100  200    500   1k   2k     5k    10k    │
│                        ││  preamp -5 dB  ·  160 Hz +3                                  │
│                        ││                                                              │
╰────────────────────────╯╰──────────────────────────────────────────────────────────────╯

 ←→ bass +2 dB  r reset  ↑↓ preset  b on/off  esc back
