crates/sound/src/snapshots/telmo_sound__ui__tests__eq_view_off.snap
---
source: crates/sound/src/ui.rs
expression: "render(&eq_app(\"Eb\"))"
---
 Sound  ›  EQ                                                        MacBook Air Speakers

╭─ Presets ──────────────╮╭─ Speakers + (off) ───────────────────────────────────── off ─╮
│ ▌ ● Speakers +         ││ +10 ┤                                                        │
│     Speakers ++        ││     │                                                        │
│     Flat               ││     │                                                        │
│     Bass boost         ││  +5 ┤                                                        │
│     Vocal              ││     │                                                        │
│     Late night         ││     │                                                        │
│                        ││   0 ┤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤ │
│                        ││     │                                                        │
│                        ││     │                                                        │
│                        ││  -5 ┤                                                        │
│                        ││     │                                                        │
│                        ││     │▁▃▅▆▆▅▃▁     ▁▁        ▁▂▃▃▃▂                           │
│                        ││ -10 ┤▇▇▇▇▇▇▇▇▇▆▆▆▇▇▇▇▆▄▃▃▃▄▅▇▇▇▇▇▇▇▅▄▄▃▄▄▅▅▅▄▄▃▃▃▃▄▅▆▇▇▆▅▄▃▂ │
│                        ││      20     50    100  200    500   1k   2k     5k    10k    │
│                        ││  preamp -3 dB  ·  160 Hz +3                                  │
│                        ││                                                              │
╰────────────────────────╯╰──────────────────────────────────────────────────────────────╯

 b turn back on  ↑↓ preset  esc back
