crates/sound/src/snapshots/telmo_sound__ui__tests__eq_view_wired_headphones.snap
---
source: crates/sound/src/ui.rs
expression: "render(&eq_app(\"jjE\"))"
---
 Sound  ›  EQ                                                         External Headphones

╭─ Presets ──────────────╮╭─ + Sub-bass ──────────────────────────────────────────── on ─╮
│     As is              ││ +10 ┤                                                        │
│ ▌ ● + Sub-bass         ││     │                                                        │
│     + Sub-bass ++      ││     │                                                        │
│     Sub focus          ││  +5 ┤                                                        │
│     Warm               ││     │                                                        │
│     Late night         ││     │⠉⠉⠉⠉⠉⠓⠒⠒⠒⠒⠲⠤⣄⣀⡀                                         │
│                        ││   0 ┤──────────────⠉⠉⠓⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒ │
│                        ││     │                                                        │
│                        ││     │                                                        │
│                        ││  -5 ┤                                                        │
│                        ││     │                                                        │
│                        ││     │▁▃▅▆▆▅▃▁     ▁▁        ▁▂▃▃▃▂                           │
│                        ││ -10 ┤▇▇▇▇▇▇▇▇▇▆▆▆▇▇▇▇▆▄▃▃▃▄▅▇▇▇▇▇▇▇▅▄▄▃▄▄▅▅▅▄▄▃▃▃▃▄▅▆▇▇▆▅▄▃▂ │
│                        ││      20     50    100  200    500   1k   2k     5k    10k    │
│                        ││  preamp -2 dB  ·  shelf 100 Hz +2                            │
│                        ││                                                              │
╰────────────────────────╯╰──────────────────────────────────────────────────────────────╯

 ↑↓ preset  b on/off  ←→ bass  r reset  esc back
