crates/sound/src/snapshots/telmo_sound__ui__tests__mixer_mac.snap
---
source: crates/sound/src/ui.rs
expression: "render(&app(mock::mac(), \"j\"))"
---
 Sound

╭─ Output ───────────────────────────────────────────────────────────────────────────────╮
│   ● MacBook Pro Speakers      ━━━━━━━━━━━━━━━━━━━───────────    62%                    │
│ ▌   AirPods Pro               ━━━━━━━━━━━━──────────────────    40%                    │
│     LG UltraFine              fixed volume                                             │
╰────────────────────────────────────────────────────────────────────────────────────────╯
╭─ Input ────────────────────────────────────────────────────────────────────────────────╮
│   ● MacBook Pro Microphone    ━━━━━━━━━━━━━━━━━━━━━━━───────    75%                    │
│     AirPods Pro               ━━━━━━━━━━━━━━━───────────────    50%                    │
╰────────────────────────────────────────────────────────────────────────────────────────╯








▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁ ▁

 ←→ volume  m mute  ↵ set default  f song  ? more  esc close
